Removed tidy from dist.ini and added warnings and strict to be safe.

--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,7 @@ author  = Roman F. <romanf@cpan.org>
 [PodWeaver]
 [NoTabsTests]
 [EOLTests]
-[TidyAll]
+;[TidyAll]
 [Bugtracker]
 [CPANFile]
 [Prereqs::FromCPANfile]
